Sat Feb 25 17:09:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_inspect), io.c (rb_io_inspect): keep encoding of path.
	  [Bug #6072]

Sat Feb 25 16:39:13 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* complex.c (nucomp_marshal_load): raise error on invalid data.
	  reported by John Firebaugh [ruby-core:42860] [Bug #6076]

Fri Feb 24 23:49:05 2012  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/ostruct.rb (delete_field): Bug fix so previous value is
	  returned. Patch by Nick Recobra [Bug #6063]

Fri Feb 24 08:53:28 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_string, parser_yylex): insert a backslash
	  if the next character is non-ascii.  [ruby-dev:45278] [Bug #6069]

Thu Feb 23 14:44:36 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI::Parser#initialize_regexp):
	  use \A \z instead of ^ $. [Bug #5843]

Thu Feb 23 08:08:23 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_uchmod): typo.  [Bug#5671] [ruby-dev:44898]

	* test/ruby/test_file.rb (TestFile#test_chmod_m17n): test of above bug.

Wed Feb 22 23:27:52 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/iconv/test_option.rb: enabled.  [ruby-core:42802][Bug #6061]

Wed Feb 22 22:04:15 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_foreach): argument check before making Enumerator.
	  [ruby-dev:31525]

Wed Feb 22 22:04:15 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_foreach): return enumerator including kerword
	  arguments.  [ruby-dev:45267][Bug #6054]

Wed Feb 22 21:42:16 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: remove workaround replacement from gcc to gcc-4.2.
	  [Backport #6043]

Wed Feb 22 08:11:06 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c : remove gc_clear_mark_on_sweep_slots() and use
	  rest_sweep() instead of it, because some dead objects might be
	  marked in next the mark phase by false pointers.
	  [ruby-core:42672]
