@@ -1,3 +1,8 @@
+Sat Feb 25 17:10:51 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/fileutils.rb: use chomp(?/) instead of sub to optimize and avoid
+	  to regexping invalid string.
+
 Sat Feb 25 17:09:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (dir_inspect), io.c (rb_io_inspect): keep encoding of path.
